# omnilingual-asr-service

./: Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/static/: styles.css
app/templates/: base.html  index.html
src/: transcribe.py
