[project]
name = "omnilingual-asr-service"
version = "0.1.0"
description = "FastAPI with UI on top of Meta Omnilingual ASR"
authors = [
    {name = "Erling Singstad Paulsen"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "omnilingual-asr (>=0.1.0,<0.2.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
